--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -51,6 +51,7 @@
                 <div class="row zimu">
                     <div class="col-sm-12 col-md-12 yd-offw-des">
                         <div class="yd-offw-des-text" style="margin:0;padding: 0">
+                            浙江建筑考试宝典软件是一款运行于手机端的软件。软件可以为更多需要的人提供培训学习的需求，浙江建筑培训从多个方面为用户提供学习帮助。为各类建筑考生服务，让建筑考试的学习变得更加简单，提供更多的便捷。
                         </div>
                     </div>
                 </div>
