fix register link

--- a/templates/register.html
+++ b/templates/register.html
@@ -209,11 +209,11 @@
       <div class="register-down" style="margin-top: 40px">
 
       <div style="width: 100%;height: 30rpx;"></div>
-        <a class="register-down-btn" href="https://itunes.apple.com/app/1464656993">
+        <a class="register-down-btn" href="https://itunes.apple.com/app/1475728661">
           <img src="{{STATIC_URL}}register/ios.png" style="width: 15px;vertical-align: middle;margin-right: 20px">
           IOS版本下载
         </a>
-        <a class="register-down-btn" href="https://www.pgyer.com/JqYg">
+        <a class="register-down-btn" href="https://www.pgyer.com/jn3D">
           <img src="{{STATIC_URL}}register/android.png" style="width: 15px;vertical-align: middle;margin-right: 20px">
           Android版本下载
         </a>
