--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,6 +4,6 @@
 <title>测试</title>
 </head>
 <body> 
-<iframe src="https://h5.ele.me/fire/water/?from=groupmessage#refer_id=60208281&refer_code=481a3575191e79d716fdfc96f4b9bd01&refer_channel_code=1&refer_channel_type=2" height="100%" width="100%" id="frame_full" frameborder="0" scrolling="auto"></iframe>
+<iframe src="https://m.baidu.com/" height="100%" width="100%" id="frame_full" frameborder="0" scrolling="auto"></iframe>
 </body>
 </html>
