modify android app download link

--- a/templates/register.html
+++ b/templates/register.html
@@ -215,7 +215,7 @@
                 <img src="{{ STATIC_URL }}register/ios.png" style="width: 15px;vertical-align: middle;margin-right: 20px">
                 IOS版本下载
             </a>
-            <a class="register-down-btn" href="https://www.pgyer.com/jn3D">
+            <a class="register-down-btn" href="https://fir.im/fzqp">
                 <img src="{{ STATIC_URL }}register/android.png" style="width: 15px;vertical-align: middle;margin-right: 20px">
                 Android版本下载
             </a>
